# kiso

./: .clang-format  .cproject  .gitignore  .project  CHANGELOG.md  CMakeLists.txt  DISCLAIMER  DISCLAIMER.md  Jenkinsfile  NOTICE.md  README.md  RELEASE_NOTES.md  default_config.cmake  kiso_defaults.cmake  meson.build  notice  testing.md  toolchain_arm_gcc.cmake
boards/: CMakeLists.txt
boards/CommonGateway/: Application_STM32L486VGT.ld  Application_STM32L4xx_FLASH.ld  CMakeLists.txt  Readme.md  board_config.cmake  meson.build  meson_config_stm32l4_gcc7.ini  meson_config_stm32l4_gcc8.ini
boards/CommonGateway/bsp/: Readme.md
boards/CommonGateway/bsp/doxygen/: Doxyfile  MainPage.dox
boards/CommonGateway/bsp/include/: BSP_BLE_CC2640.h  BSP_CommonGateway.h
boards/CommonGateway/bsp/source/: bsp_api_bma280.c  bsp_api_bme280.c  bsp_api_board.c  bsp_api_cc2640.c  bsp_api_led.c  bsp_api_maxm8.c  bsp_api_sarar4n4.c  bsp_api_testif.c  bsp_api_w25q64.c  bsp_exception_handler.c  bsp_gpio.c  bsp_i2c.c  bsp_power_supply.c  bsp_retarget_printf.c  bsp_time.c  system_stm32l4xx.c
boards/CommonGateway/config/Essentials/: Kiso_HALConfig.cmake
boards/CommonGateway/kiso_config/: FreeRTOSConfig.h  PriorityConfig.h  SystemConfig.h  stm32l4xx_hal_conf.h
boards/CommonGateway/kiso_config/Cellular/: BCDS_CellularConfig.h
boards/CommonGateway/kiso_config/Essentials/: BCDS_HALConfig.h  Kiso_HALConfig.h
boards/CommonGateway/kiso_config/MbedTLS/: threading_alt.h
boards/CommonGateway/kiso_config/SeggerRTT/: SEGGER_RTT_Conf.h
boards/CommonGateway/kiso_config/Utils/: BCDS_UtilsConfig.h  Kiso_UtilsConfig.h  LogConfig.h
boards/Host/: Readme.md  meson_config_unittest.ini
boards/Host/kiso_config/Essentials/: BCDS_HALConfig.h
boards/Host/kiso_config/Utils/: BCDS_UtilsConfig.h  LogConfig.h  PipeAndFilterConfig.h
boards/NucleoF767/: Application_STM32F7xx_FLASH.ld  CMakeLists.txt  Readme.md  board_config.cmake
boards/NucleoF767/bsp/include/: BSP_NucleoF767.h
boards/NucleoF767/bsp/source/: bsp_api_GenericUart.c  bsp_api_board.c  bsp_api_button.c  bsp_api_genericuart.c  bsp_api_led.c  bsp_api_testif.c  bsp_exception_handler.c  bsp_gpio.c  bsp_time.c  startup_stm32f767xx.s  system_stm32f7xx.c
boards/NucleoL4R5ZI/: CMakeLists.txt  Readme.md  board_config.cmake  stm32l4r5zi.ld
boards/NucleoL4R5ZI/bsp/doxygen/: Doxyfile
boards/NucleoL4R5ZI/bsp/include/: BSP_NucleoL4R5ZI.h
boards/NucleoL4R5ZI/bsp/source/: bsp_api_bma280.c  bsp_api_bme280.c  bsp_api_board.c  bsp_api_led.c  bsp_api_testif.c  bsp_exception_handler.c  bsp_gpio.c  bsp_i2c.c  bsp_spi.c  bsp_time.c  startup_stm32l4r5xx.s
boards/NucleoL4R5ZI/config/Essentials/: Kiso_HALConfig.cmake
boards/SensGate/: meson.build  meson_config_stm32l4.ini  meson_config_stm32l4_gcc8.ini
boards/SensGate/bsp/: Makefile  Readme.md  meson.build  stm32.mk
boards/SensGate/bsp/include/: BSP_BLE_CC2640.h  BSP_Sensgate.h
boards/SensGate/bsp/source/: bsp_api_bma280.c  bsp_api_bme280.c  bsp_api_board.c  bsp_api_cc2640.c  bsp_api_led.c  bsp_api_maxm8.c  bsp_api_sarar4n4.c  bsp_api_testif.c  bsp_api_w25q64.c  bsp_exception_handler.c  bsp_gpio.c  bsp_i2c.c  bsp_time.c  (+10 more)
boards/SensGate/kiso_config/: FreeRTOSConfig.h  PriorityConfig.h  SystemConfig.h
boards/XDK110/: board_config.cmake
core/connectivity/: CMakeLists.txt
core/connectivity/cellular/: CMakeLists.txt  JenkinsBuild.sh  Makefile  Readme.md  RefContexts.dep  efm32.mk  meson.build  stm32.mk
core/essentials/: CMakeLists.txt  JenkinsBuild.sh  Makefile  README.md  RefContexts.dep  efm32.mk  meson.build  meson_config.ini  sourceFile.list  stm32.mk  ti_cc26xx.mk
core/essentials/doxygen/: DoxygenLayout.xml  MainPage.dox
core/essentials/include/: BCDS_Assert.h  BCDS_Basics.h  BCDS_Essentials.h  BCDS_HAL.h  BCDS_HAL_CriticalSection.h  BCDS_HAL_Delay.h  BCDS_HAL_Mutex.h  BCDS_HAL_Signal.h  BCDS_Retcode.h  Kiso_Assert.h  Kiso_Basics.h  Kiso_Essentials.h  Kiso_HAL.h  Kiso_HAL_CriticalSection.h  Kiso_HAL_Delay.h  Kiso_HAL_Mutex.h  Kiso_HAL_Signal.h  Kiso_Retcode.h
core/essentials/source/: Assert.c  Cmsis.h  CriticalSection.c  Delay.c  Functions.c  Mutex.c  Retcode.c  Signal.c
core/essentials/test/: CMakeLists.txt
core/testing/: CMakeLists.txt
core/testing/include/: Kiso_Testing.h  Kiso_Testing_Config.h
core/testing/source/: CChannel.c  Serial.c  SerialMsgTransceiver.c  TestRegistry.c  TestRunner.c  Testing.c
core/utils/: CMakeLists.txt  JenkinsBuild.sh  Makefile  README.md  RefContexts.dep  efm32.mk  meson.build  stm32.mk  ti_cc26xx.mk
core/utils/doxygen/: MainPage.dox
core/utils/include/: BCDS_CRC.h  BCDS_CmdLineDebugger.h  BCDS_CmdProcessor.h  BCDS_ErrorLogger.h  BCDS_EventHub.h  BCDS_GuardedTask.h  BCDS_I2CTransceiver.h  BCDS_LeanB2CAP.h  BCDS_Logging.h  BCDS_Queue.h  BCDS_RingBuffer.h  BCDS_SleepControl.h  BCDS_TLV.h  BCDS_TaskMonitor.h  BCDS_UARTTransceiver.h  BCDS_Utils.h  BCDS_XProtocol.h  CDDK_PipeAndFilter.h  Kiso_CRC.h  Kiso_CmdLineDebugger.h  Kiso_CmdProcessor.h  Kiso_ErrorLogger.h  Kiso_EventHub.h  Kiso_GuardedTask.h  Kiso_I2CTransceiver.h  Kiso_LeanB2CAP.h  Kiso_Logging.h  Kiso_PipeAndFilter.h  Kiso_Queue.h  Kiso_RingBuffer.h  Kiso_TLV.h  Kiso_TaskMonitor.h  Kiso_UARTTransceiver.h  Kiso_Utils.h  Kiso_XProtocol.h
core/utils/source/: CRC.c  CmdLineDebugger.c  ErrorLogger.c  LeanB2CAP.c  LeanB2CAP.h  RingBuffer.c  TLV.c  UartTransceiver.c  XProtocol.c
core/utils/test/: CMakeLists.txt
docs/: CMakeLists.txt
docs/doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in  DoxygenLayout.xml  MainPage.dox  meson.build
docs/website/: Jenkinsfile  README.md  config.toml
docs/website/content/: _index.md
docs/website/resources/: kisoConfig.vsdx
examples/CommonGateway/c-cellular/: CMakeLists.txt  readme.md
examples/CommonGateway/c-leds/: CMakeLists.txt  ConnectRTT.bat  Libraries.mk  Makefile  common_settings.mk  meson.build  readme.md
examples/CommonGateway/c-sensors/: CMakeLists.txt  meson.build  readme.md
examples/NucleoF767/c-leds/: CMakeLists.txt  readme.md
examples/NucleoL4R5ZI/c-leds/: CMakeLists.txt
testing/integration/test-executor/: CMakeLists.txt  readme.md
(+1342 files in other folders)
